crates/lemnos-macros-tests/tests/ui/configured_duplicate_endpoint_name.stderr
error: duplicate configured endpoint name `sensor`
  --> tests/ui/configured_duplicate_endpoint_name.rs:16:5
   |
16 |     gyro_address: u16,
   |     ^^^^^^^^^^^^
